--- a/.github/workflows/pepeline.yaml
+++ b/.github/workflows/pepeline.yaml
@@ -17,5 +17,8 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 16
+        registry-url: 'https://registry.npmjs.org'
+    - run: npm ci
+    - run: npm publish
     - name: Install dependencies
       run: npm install -no-audit --no-fund --no-optional -f
