--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "npm-pkg-hook",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Jesus123780/pkg-hook"
+  },
   "version": "1.0.1",
   "description": "description-pkg-hook",
   "main": "/src/index.jsx",
