--- a/.github/workflows/pepeline.yaml
+++ b/.github/workflows/pepeline.yaml
@@ -1,5 +1,10 @@
 name: Publish package to GitHub Packages
 on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [develop]
+    types: [opened, synchronize]
   release:
     types: [created]
 jobs:
