--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "type": "git",
     "url": "https://github.com/Jesus123780/pkg-hook"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "version": "1.0.2",
   "description": "description-pkg-hook",
   "main": "/src/index.jsx",
