--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@apollo/client": "3.6.9",
     "@typescript-eslint/parser": "^5.37.0",
     "js-cookie": "3.0.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
