--- a/package.json
+++ b/package.json
@@ -1,23 +1,5 @@
 {
-  "name": "npm-pkg-hook",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Jesus123780/pkg-hook"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
-  },
-  "version": "1.1.7",
-  "description": "description-pkg-hook",
-  "main": "/src/index.jsx",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint .",
-    "lint:fix": "npm run lint -- --fix",
-    "rm": "rm -rf node_modules package-lock.json && npm i"
-  },
   "author": "",
-  "license": "ISC",
   "dependencies": {
     "@apollo/client": "3.6.9",
     "@typescript-eslint/parser": "^5.37.0",
@@ -29,6 +11,7 @@
     "react-dom": "18.1.0",
     "react-query": "^3.39.2"
   },
+  "description": "description-pkg-hook",
   "devDependencies": {
     "@babel/preset-env": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
@@ -43,5 +26,22 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0"
-  }
+  },
+  "license": "ISC",
+  "main": "/src/index.jsx",
+  "name": "npm-pkg-hook",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Jesus123780/pkg-hook"
+  },
+  "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "npm run lint -- --fix",
+    "rm": "rm -rf node_modules package-lock.json && npm i",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "version": "1.1.8"
 }
