--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "js-cookie": "3.0.1",
     "lodash": "^4.17.21",
     "md5": "2.3.0",
-    "moment": "^2.29.4", 
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-query": "^3.39.2"
+    "react-query": "^3.39.2",
+    "react-responsive": "^10.0.0"
   },
   "description": "description-pkg-hook",
   "devDependencies": {
@@ -30,7 +31,7 @@
   },
   "license": "ISC",
   "main": "/src/index.jsx",
-  "name": "npm-pkg-hook", 
+  "name": "npm-pkg-hook",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
@@ -44,5 +45,5 @@
     "rm": "rm -rf node_modules package-lock.json && npm i",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "1.8.4"
+  "version": "1.8.5"
 }
