--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 NPM_TOKEN = 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
+
+# ENV IMAGES
+DEFAULTBANNER='/images/DEFAULTBANNER.png'
+DEFAULTLOGO='/images/DEFAULTLOGO.png'
