--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
     "type": "git",
     "url": "https://github.com/Jesus123780/pkg-hook"
   },
+  "private": false,
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
     "rm": "rm -rf node_modules package-lock.json && npm i",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "1.11.6"
+  "version": "1.11.9"
 }
