--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "js-cookie": "3.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-query": "^3.39.2",
     "xlsx": "0.18.5"
   },
@@ -46,5 +46,5 @@
     "rm": "rm -rf node_modules package-lock.json && npm i",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "1.12.0"
+  "version": "1.12.3"
 }
