--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-env": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.11.16",
     "@types/react": "^18.0.20",
     "@typescript-eslint/eslint-plugin": "5.29.0",
@@ -28,7 +29,9 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.6"
   },
   "license": "ISC",
   "main": "/src/index.jsx",
@@ -45,7 +48,8 @@
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
     "rm": "rm -rf node_modules package-lock.json && npm i",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "version": "1.12.5"
 }
