--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
-    "esModuleInterop": true,
+    "module": "ES2020",
+    "moduleResolution": "node",
+    "declaration": true,
+    "outDir": "dist",
     "strict": true,
-    "jsx": "react-jsx",
-    "skipLibCheck": true,
-    "outDir": "dist"
+    "allowJs": false,
+    "esModuleInterop": true
   },
-  "include": ["src/**/*"]
+  "include": ["src", "index.ts"]
 }
