--- a/package.json
+++ b/package.json
@@ -1,37 +1,41 @@
 {
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "dependencies": {
+    "@apollo/client": "3.13.5",
+    "file-saver": "2.0.5",
+    "graphql": "^16.12.0",
+    "js-cookie": "^3.0.5",
+    "lodash": "^4.17.23",
+    "xlsx": "0.18.5"
+  },
+  "devDependencies": {
+    "@types/file-saver": "2.0.7",
+    "@types/js-cookie": "3.0.6",
+    "@types/react": "18.0.20",
+    "tsup": "8.5.1",
+    "typescript": "5.9.3"
+  },
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "development": "./src/index.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
     }
+  },
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "name": "npm-pkg-hook",
+  "peerDependencies": {
+    "next": "^14 || ^15",
+    "react": "^18 || ^19",
+    "react-dom": "^18 || ^19"
   },
   "scripts": {
     "build": "tsup",
+    "lint": "eslint .",
     "prepare": "npm run build",
     "prepublishOnly": "npm run build",
-    "lint": "eslint .",
     "test": "jest"
   },
-  "peerDependencies": {
-    "react": "^18 || ^19",
-    "react-dom": "^18 || ^19",
-    "next": "^14 || ^15",
-    "@apollo/client": "^3 || ^4",
-    "graphql": "^16",
-    "fs": "0.0.1-security"
-  },
-  "devDependencies": {
-    "tsup": "8.5.1",
-    "typescript": "5.9.3",
-    "@types/react": "18.0.20",
-    "@types/js-cookie": "3.0.6",
-    "@types/file-saver": "2.0.7"
-  },
-  "version": "1.13.0",
-  "name": "npm-pkg-hook"
+  "types": "dist/index.d.ts",
+  "version": "1.13.7"
 }
