--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "graphql": "16.12.0",
     "js-cookie": "3.0.5",
     "lodash": "4.17.23",
-    "typedefs": "0.0.3",
-    "typesdefs": "1.0.6",
+    "typesdefs": "^1.0.8",
     "xlsx": "0.18.5"
   },
   "devDependencies": {
@@ -63,5 +62,5 @@
     "link": "npm link typedefs"
   },
   "types": "dist/index.d.ts",
-  "version": "1.14.2"
+  "version": "1.14.5"
 }
